--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation 'it.xabaras.android:recyclerview-swipedecorator:1.2.3'
+    implementation 'org.ocpsoft.prettytime:prettytime:4.0.4.Final'
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
 
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.10'
