--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,16 @@ android {
         }
     }
 
+    sourceSets {
+        String sharedTestDir = 'src/sharedTest/java'
+        test {
+            java.srcDir sharedTestDir
+        }
+        androidTest {
+            java.srcDir sharedTestDir
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -72,13 +82,26 @@ dependencies {
     kapt 'androidx.room:room-compiler:2.2.5'
     implementation 'androidx.room:room-ktx:2.2.5'
 
-    testImplementation 'junit:junit:4.13.1'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
     implementation 'it.xabaras.android:recyclerview-swipedecorator:1.2.3'
     implementation 'org.ocpsoft.prettytime:prettytime:4.0.4.Final'
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
 
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.1'
+
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2'
+    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'org.robolectric:robolectric:4.4'
+    testImplementation 'androidx.test.ext:truth:1.3.0'
+    testImplementation "io.mockk:mockk:1.10.3-jdk8"
+    testImplementation 'io.github.serpro69:kotlin-faker:1.5.0'
+//    testImplementation 'com.google.dagger:hilt-android-testing:2.28-alpha'
+//    kaptTest 'com.google.dagger:hilt-android-compiler:2.28-alpha'
+
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'io.github.serpro69:kotlin-faker:1.5.0'
+}
+
+kapt {
+    correctErrorTypes true
 }
