--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,12 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
+
+    testOptions {
+        unitTests {
+            includeAndroidResources true
+        }
+    }
 }
 
 dependencies {
@@ -88,12 +94,18 @@ dependencies {
 
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.1'
 
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2'
     testImplementation 'junit:junit:4.13.1'
-    testImplementation 'org.robolectric:robolectric:4.4'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2'
+    testImplementation 'androidx.test:core:1.3.0'
+    testImplementation 'androidx.test:runner:1.3.0'
+    testImplementation 'androidx.test:rules:1.3.0'
+    testImplementation 'androidx.test.ext:junit:1.1.2'
     testImplementation 'androidx.test.ext:truth:1.3.0'
+    testImplementation 'com.google.truth:truth:1.1'
+    testImplementation 'org.robolectric:robolectric:4.4'
     testImplementation "io.mockk:mockk:1.10.3-jdk8"
     testImplementation 'io.github.serpro69:kotlin-faker:1.5.0'
+    testImplementation 'org.robolectric:robolectric:4.4'
 //    testImplementation 'com.google.dagger:hilt-android-testing:2.28-alpha'
 //    kaptTest 'com.google.dagger:hilt-android-compiler:2.28-alpha'
 
