--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,10 +109,11 @@ dependencies {
     testImplementation 'org.robolectric:robolectric:4.4'
     testImplementation "io.mockk:mockk:1.10.3-jdk8"
     testImplementation 'io.github.serpro69:kotlin-faker:1.5.0'
-    testImplementation 'org.robolectric:robolectric:4.4'
-//    testImplementation 'com.google.dagger:hilt-android-testing:2.28-alpha'
-//    kaptTest 'com.google.dagger:hilt-android-compiler:2.28-alpha'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.0'
+    testImplementation 'com.google.dagger:hilt-android-testing:2.28-alpha'
+    kaptTest 'com.google.dagger:hilt-android-compiler:2.28-alpha'
 
+    androidTestImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation 'io.github.serpro69:kotlin-faker:1.5.0'
@@ -120,4 +121,8 @@ dependencies {
 
 kapt {
     correctErrorTypes true
+}
+
+hilt {
+    enableTransformForLocalTests = true
 }
