--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,11 +98,14 @@ dependencies {
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
 
     testImplementation 'junit:junit:4.13.1'
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2'
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2'
     testImplementation 'androidx.test:core:1.3.0'
     testImplementation 'androidx.test:runner:1.3.0'
     testImplementation 'androidx.test:rules:1.3.0'
+    testImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
+    testImplementation 'androidx.test.espresso:espresso-intents:3.3.0'
     testImplementation 'androidx.test.ext:junit:1.1.2'
     testImplementation 'androidx.test.ext:truth:1.3.0'
     testImplementation 'com.google.truth:truth:1.1'
@@ -112,6 +115,7 @@ dependencies {
     testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.0'
     testImplementation 'com.google.dagger:hilt-android-testing:2.28-alpha'
     kaptTest 'com.google.dagger:hilt-android-compiler:2.28-alpha'
+    kaptTest 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
 
     androidTestImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
